--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <title>Kurs</title>
 </head>
 <body>
-    <div><h1>Lista zakupów</h1>
+    <div class="main"><h1>Lista zakupów</h1>
     <h2>Biedronka</h2>
-    </div>
-    <div>
+    <div class="main__list">
         <ul>
     <li>mleko</li>
     <li>masło</li>
@@ -27,6 +26,8 @@
     <li>ser zółty kostka</li>
     <li>jogurty do picia truskawkowe</li>
     <li></li></ul></div>
+    </div>
+    
     <div></div>
     <div></div>
     <script src="js/scripts.js"></script>
