--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,29 +8,35 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Kurs</title>
 </head>
+
 <body>
-    <div class="main"><h1>Lista zakupów</h1>
-    <h2>Biedronka</h2>
-    <div class="main__list">
-        <ul>
-    <li>mleko</li>
-    <li>masło</li>
-    <li>cukier</li>
-    <li>mąka 2kg</li>
-    <li>chleb</li>
-    <li>płatki czekoladowe</li>
-    <li>płyn do mycia naczyń</li>
-    <li>majonez</li>
-    <li>pasztet</li>
-    <li>parówki</li>
-    <li>wędlina</li>
-    <li>ser zółty kostka</li>
-    <li>jogurty do picia truskawkowe</li>
-    <li></li></ul></div>
+    <div class="main">
+        
+        <div class="main__list">
+            <h1>Lista zakupów</h1>
+        <h2>Biedronka</h2>
+            <ul class="main__list--item">
+                <li class="item">mleko</li>
+                <li class="item">masło</li>
+                <li class="item">cukier</li>
+                <li class="item">mąka 2kg</li>
+                <li class="item">chleb</li>
+                <li class="item">płatki czekoladowe</li>
+                <li class="item">płyn do mycia naczyń</li>
+                <li class="item">majonez</li>
+                <li class="item">pasztet</li>
+                <li class="item">parówki</li>
+                <li class="item">wędlina</li>
+                <li class="item">ser zółty kostka</li>
+                <li class="item">jogurty do picia truskawkowe</li>
+                <li class="item"></li>
+            </ul>
+        </div>
     </div>
-    
+
     <div></div>
     <div></div>
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
