--- a/index.html
+++ b/index.html
@@ -39,14 +39,19 @@
                 <li class="item">jogur grecki</li>
                 <li class="item">Tortilla</li>
                 <li class="item">Posypka dekoracyjna kolorowa</li>
+                <li class="item">koperek</li>
+                <li class="item">melisa w doniczce - przy warzywach</li>
+                <li class="item">boczek w plastrach</li>
+                <li class="item">syrop malinowy do rozcięczania</li>
                 <li class="item"></li>
                 <li class="item"></li>
+
             </ul>
         </div>
     </div>
 
 
-   >
+   
     <script src="js/scripts.js"></script>
 </body>
 
