--- a/index.html
+++ b/index.html
@@ -43,16 +43,12 @@
                 <li class="item">melisa w doniczce - przy warzywach</li>
                 <li class="item">boczek w plastrach</li>
                 <li class="item">syrop malinowy do rozcięczania</li>
-                <li class="item"></li>
+                <li class="item">mleko</li>
                 <li class="item"></li>
 
             </ul>
         </div>
-    </div>
-
-
-   
+    </div>   
     <script src="js/scripts.js"></script>
 </body>
-
 </html>
